[package]
name = "asset-resolver"
version = "0.1.0"
authors = ["Evan Pratten <ewpratten@gmail.com>"]
edition = "2018"
description = "A standard system for asset path resolution "
documentation = "https://docs.rs/asset-resolver"
readme = "README.md"
homepage = "https://github.com/ewpratten/asset-resolver-rs"
repository = "https://github.com/ewpratten/asset-resolver-rs"
license = "GPL-3.0"
keywords = ["asset", "resolver", "path", "translation"]
categories = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
